<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_random"
        android:orderInCategory="100"
        android:title="@string/text_nav_random_photo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_menu"
        android:orderInCategory="100"
        android:title="@string/sort_menu"
        app:showAsAction="ifRoom">
        <item

            android:id="@+id/menu_sort_latest"
            android:orderInCategory="200"
            android:title="@string/txt_sort_by_latest"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_sort_oldest"
            android:orderInCategory="300"
            android:title="@string/txt_sort_by_oldest"
            app:showAsAction="never"/>
        <item
            android:id="@+id/menu_sort_popular"
            android:orderInCategory="400"
            android:title="@string/txt_sort_by_popularity"
            app:showAsAction="never"/>
    </item>

</menu>